deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ck-empire
  labels:
    name: ck-empire
    app: ck-empire-builder
    environment: production
